Update with big NUTS run for Loa loa! Plus, start thinking about conclusions

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -144,7 +144,7 @@ Accordingly, the work in this thesis is centred on measurement of HIV at the dis
 <!-- Uneven burden across people -->
 In all countries and contexts, some groups of people are at much higher risk than others.
 Groups of people at increased risk of HIV infection are known as key populations (KPs).
-Examples include men who have sex with men (MSM), female sex workers (FSW), people who inject drugs (PWID), and transgender people (TGP) [@stevens2022key].
+Examples include men who have sex with men (MSM), female sex workers (FSW), people who inject drugs (PWID), and transgender people (TGP) [@stevens2023estimating].
 KPs are often marginalised, and face legal and social barriers.
 Concentrated settings are defined by the majority of new HIV infections occurring in KPs and their sexual partners.
 In generalised settings like SSA, though concentrated subepidemics do occur [@tanser2014concentrated], risk is more diffuse across the population.
@@ -232,7 +232,7 @@ As a result, data for subpopulations are usually sparse.
 
 2. **Missing data**:
 The sampling frame of a survey may not correspond to the target population.
-For example, some KPs are difficult to reach, and may be omitted from sampling frames.
+For example, some KPs are difficult to reach, and may be omitted from sampling frames [@jin2021overview].
 Additionally, individuals included on the sampling frame may choose not to respond.
 Each of these issues can be characterised as being problems of missing data.
 
