--- a/references.bib
+++ b/references.bib
@@ -2281,19 +2281,13 @@
   publisher = {Springer}
 }
 
-@article{stevens2022estimating,
-  title = {{Estimating key population size, HIV prevalence, and ART coverage for sub-Saharan Africa at the national level}},
-  author = {Stevens, Oliver and Sabin, Keith and Arias Garcia, Sonia and Willis, Kalai and Abdul-Quader, Abu and McIntyre, Anne and Cowan, Frances and Degenhardt, Louisa and Zhou, Jinkou and Sathane, Isabel and Boothe, Makini and Platt, Lucy and Rice, Brian and Hladik, Wolfgang and Baral, Stefan and Mahy, Mary and Eaton, Jeffrey W.},
-  year = 2022
-}
-
-@article{stevens2022key,
-  title = {{Key population size, HIV prevalence, and ART coverage in sub-Saharan Africa: systematic collation and synthesis of survey data}},
-  author = {Stevens, Oliver and Sabin, Keith and Garcia, Sonia Arias and Anderson, Rebecca and Willis, Kalai and Abdul-Quader, Abu and McIntyre, Anne and Fearon, Elizabeth and Grard, Emilie and Stewart-Brown, Alice and others},
-  year = 2022,
+@article {stevens2023estimating,
+		title = {{Population size, HIV prevalence, and antiretroviral therapy coverage among key populations in sub-Saharan Africa: collation and synthesis of survey data 2010-2023}},
+	author = {Oliver Stevens and Keith Sabin and Rebecca Anderson and Sonia Arias Garcia and Kalai Willis and Amrita Rao and Anne F. McIntyre and Elizabeth Fearon and Emilie Grard and Alice Stuart-Brown and Frances Cowan and Louisa Degenhardt and James Stannah and Jinkou Zhao and Avi J. Hakim and Katherine Rucinski and Isabel Sathane and Makini Boothe and Lydia Atuhaire and Peter S. Nyasulu and Mathieu Maheu-Giroux and Lucy Platt and Brian Rice and Wolfgang Hladik and Stefan Baral and Mary Mahy and Jeffrey W. Imai-Eaton},
+	year = {2023},
+	URL = {https://www.medrxiv.org/content/early/2023/11/22/2022.07.27.22278071},
   journal = {medRxiv},
   publisher = {Cold Spring Harbor Laboratory Press},
-  pages = {2022--07}
 }
 
 @article{stover2019updates,
@@ -2901,4 +2895,25 @@
   pages = {676 -- 685},
   year = {2012},
   publisher = {Oxford University Press}
+}
+
+@article{jin2021overview,
+  title={Overview of the epidemiological conditions of HIV among key populations in Africa},
+  author={Jin, Harry and Restar, Arjee and Beyrer, Chris},
+  journal={Journal of the International AIDS Society},
+  volume={24},
+  pages={e25716},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+@article{thyng2016true,
+  title={True colors of oceanography: Guidelines for effective and accurate colormap selection},
+  author={Thyng, Kristen M and Greene, Chad A and Hetland, Robert D and Zimmerle, Heather M and DiMarco, Steven F},
+  journal={Oceanography},
+  volume={29},
+  number={3},
+  pages={9--13},
+  year={2016},
+  publisher={JSTOR}
 }
