--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -43,7 +43,7 @@ knitr::include_graphics("../figures/beyond-borders/geometries.png")
 #
 
 ```{r crps, echo=FALSE, out.width="80%", fig.align = 'center'}
-resource_version <- "20231207-114837-b071e571"
+resource_version <- "20231212-153116-1996fc83"
 knitr::include_graphics(paste0("../resources/beyond-borders/", resource_version, "/depends/crps-mean-se-civ.png"))
 ```
 
@@ -55,9 +55,21 @@ knitr::include_graphics("global-aids-strategy.png")
 
 #
 
-```{r available-surveys, echo=FALSE, out.width="90%"}
+```{r available-surveys, echo=FALSE, out.width="90%", fig.align = 'center'}
 resource_version <- "20231120-121631-164346ab"
 knitr::include_graphics(paste0("../resources/multi-agyw/", resource_version, "/depends/available-surveys.png"))
+```
+
+#
+
+```{r intercept-comparison, echo=FALSE, out.width="80%", fig.align = 'center'}
+knitr::include_graphics("../figures/naomi-aghq/intercept-comparison.png")
+```
+
+#
+
+```{r conditional-simulation-rho-diff-fixed, echo=FALSE, out.width="90%", fig.align = 'center'}
+knitr::include_graphics("../figures/naomi-aghq/conditional-simulation-rho-diff-fixed.png")
 ```
 
 #
