Add prior sensitivity analysis appendix figures

--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -2,10 +2,8 @@
 
 `r if(!knitr:::is_latex_output()) '# (APPENDIX) Appendix {-}'` 
 
-<!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
-
 ```{r}
-resource_version <- "20231212-153116-1996fc83"
+resource_version <- "20231215-132414-23b4342b"
 ```
 
 # Models for areal spatial structure
@@ -51,7 +49,21 @@ path <- paste0("resources/beyond-borders/", resource_version, "/depends/time-tak
 knitr::include_graphics(path)
 ```
 
-## Lengthscale prior sensitivity analysis {#lengthscale-prior}
+## Lengthscale prior sensitivity {#lengthscale-prior}
+
+(ref:lengthscale-prior) Figure caption.
+
+```{r lengthscale-prior, fig.cap="(ref:lengthscale-prior)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/lengthscale-prior.png")
+knitr::include_graphics(path)
+```
+
+(ref:lengthscale-posterior) Figure caption.
+
+```{r lengthscale-posterior, fig.cap="(ref:lengthscale-posterior)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/lengthscale-posterior.png")
+knitr::include_graphics(path)
+```
 
 ## Simulation study {#simulation-appendix}
 
