--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -13,7 +13,7 @@ bibliography: references.bib
 ---
 
 ```{r}
-resource_version <- "20231212-153116-1996fc83"
+resource_version <- "20231215-132414-23b4342b"
 ```
 
 # Models for areal spatial structure {#beyond-borders}
@@ -501,7 +501,7 @@ A weakly informative $\mathcal{N}(-2, 1)$ prior was placed on $\beta_0$, setting
 
 In cases where the length-scale $l$ was fixed, it was set based on the geometry such that points an average distance apart had 1\% correlation [@best1999bayesian].
 In cases where a prior distribution was set on the length-scale it was $l \sim \mathrm{Inv{\text-}Gamma}(a, b)$, with $a$ and $b$ chosen for each geometry such that 1\% of the prior mass was below 0.1 and 1\% of the prior mass was above the maximum distance between points [@betancourt2017robust].
-Appendix \@ref(lengthscale-prior) analyses the sensitivity of the lengthscale posterior distribution to the choice of prior distribution.
+Appendix \@ref(lengthscale-prior) illustrates the sensitivity of the lengthscale posterior distribution (Figure \@ref(fig:lengthscale-posterior)) to choice of six possible lengthscale prior distributions (Figure \@ref(fig:lengthscale-prior)).
 
 #### Inference
 
