More figure captions into appendix

--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -51,14 +51,14 @@ knitr::include_graphics(path)
 
 ## Lengthscale prior sensitivity {#lengthscale-prior}
 
-(ref:lengthscale-prior) Figure caption.
+(ref:lengthscale-prior) Six lengthscale prior distributions were considered. These were: $l \sim \text{Gamma}(1, 1)$; $l \sim \text{IG}(a, b)$; $l \sim \mathcal{N}^{+}(0, \sigma)$; $l \sim \text{Log-normal}(0, 1)$; $p(l) = 1$; and $l \sim \mathcal{N}(2.5, 1)$.
 
 ```{r lengthscale-prior, fig.cap="(ref:lengthscale-prior)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/lengthscale-prior.png")
 knitr::include_graphics(path)
 ```
 
-(ref:lengthscale-posterior) Figure caption.
+(ref:lengthscale-posterior) Lengthscale posterior distributions obtained using NUTS to fit a centroid kernel model to integrated kernel data, with six different lengthscale prior distributions as described in Figure \@ref(fig:lengthscale-prior).
 
 ```{r lengthscale-posterior, fig.cap="(ref:lengthscale-posterior)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/lengthscale-posterior.png")
@@ -95,77 +95,77 @@ if(knitr::is_html_output()) gt_crps
 if(knitr::is_latex_output()) gt::as_latex(gt_crps)
 ```
 
-(ref:crps-mean-se-1) The mean CRPS and its standard error for each inferential model and simulation model on the first vignette geometry (Panel \@ref(fig:geometries)A).
+(ref:crps-mean-se-1) The mean CRPS with 95% credible interval (generated using 1.96 times the standard error) in estimating $\rho$ using each inferential model and simulation model on the first vignette geometry (Panel \@ref(fig:geometries)A).
 
 ```{r crps-mean-se-1, fig.cap="(ref:crps-mean-se-1)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-1.png")
 knitr::include_graphics(path)
 ```
 
-(ref:crps-mean-se-2) The mean CRPS and its standard error for each inferential model and simulation model on the second vignette geometry (Panel \@ref(fig:geometries)B).
+(ref:crps-mean-se-2) The mean CRPS with 95% credible interval (generated using 1.96 times the standard error) in estimating $\rho$ using each inferential model and simulation model on the second vignette geometry (Panel \@ref(fig:geometries)B).
 
 ```{r crps-mean-se-2, fig.cap="(ref:crps-mean-se-2)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-2.png")
 knitr::include_graphics(path)
 ```
 
-(ref:crps-mean-se-3) The mean CRPS and its standard error for each inferential model and simulation model on third vignette geometry (Panel \@ref(fig:geometries)C).
+(ref:crps-mean-se-3) The mean CRPS with 95% credible interval (generated using 1.96 times the standard error) in estimating $\rho$ using each inferential model and simulation model on third vignette geometry (Panel \@ref(fig:geometries)C).
 
 ```{r crps-mean-se-3, fig.cap="(ref:crps-mean-se-3)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-3.png")
 knitr::include_graphics(path)
 ```
 
-(ref:crps-mean-se-4) The mean CRPS and its standard error for each inferential model and simulation model on the fourth vignette geometry (Panel \@ref(fig:geometries)D).
+(ref:crps-mean-se-4) The mean CRPS with 95% credible interval (generated using 1.96 times the standard error) in estimating $\rho$ using each inferential model and simulation model on the fourth vignette geometry (Panel \@ref(fig:geometries)D).
 
 ```{r crps-mean-se-4, fig.cap="(ref:crps-mean-se-4)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-4.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-1) Cloropleths showing the mean value of the CRPS, under each inferential model and simulation model, at each area of the first vignette geometry (Panel \@ref(fig:geometries)A).
+(ref:map-crps-1) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the first vignette geometry (Panel \@ref(fig:geometries)A).
 
 ```{r map-crps-1, fig.cap="(ref:map-crps-1)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-1.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-2) Cloropleths showing the mean value of the CRPS, under each inferential model and simulation model, at each area of the second vignette geometry (Panel \@ref(fig:geometries)B).
+(ref:map-crps-2) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the second vignette geometry (Panel \@ref(fig:geometries)B).
 
 ```{r map-crps-2, fig.cap="(ref:map-crps-2)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-2.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-3) Cloropleths showing the mean value of the CRPS, under each inferential model and simulation model, at each area of the third vignette geometry (Panel \@ref(fig:geometries)C).
+(ref:map-crps-3) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the third vignette geometry (Panel \@ref(fig:geometries)C).
 
 ```{r map-crps-3, fig.cap="(ref:map-crps-3)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-3.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-4) Cloropleths showing the mean value of the CRPS, under each inferential model and simulation model, at each area of the fourth vignette geometry (Panel \@ref(fig:geometries)D).
+(ref:map-crps-4) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the fourth vignette geometry (Panel \@ref(fig:geometries)D).
 
 ```{r map-crps-4, fig.cap="(ref:map-crps-4)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-4.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-grid) Cloropleths showing the mean value of the CRPS, under each inferential model and simulation model, at each area of the grid geometry (Panel \@ref(fig:geometries)E).
+(ref:map-crps-grid) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the grid geometry (Panel \@ref(fig:geometries)E).
 
 ```{r map-crps-grid, fig.cap="(ref:map-crps-grid)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-grid.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-civ) Cloropleths showing the mean value of the CRPS, under each inferential model and simulation model, at each area of the Côte d’Ivoire geometry (Panel \@ref(fig:geometries)F).
+(ref:map-crps-civ) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the Côte d’Ivoire geometry (Panel \@ref(fig:geometries)F).
 
 ```{r map-crps-civ, fig.cap="(ref:map-crps-civ)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-civ.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-tex) Cloropleths showing the mean value of the CRPS, under each inferential model and simulation model, at each area of the Texas geometry (Panel \@ref(fig:geometries)G).
+(ref:map-crps-tex) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the Texas geometry (Panel \@ref(fig:geometries)G).
 
 ```{r map-crps-tex, fig.cap="(ref:map-crps-tex)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-tex.png")
@@ -174,49 +174,49 @@ knitr::include_graphics(path)
 
 ### Calibration
 
-(ref:histogram-ecdf-diff-1) Probability integral transform histograms and empirical cumulative distribution function difference plots, under each inferential model and simulation model, for the first vignette geometry (Panel \@ref(fig:geometries)A).
+(ref:histogram-ecdf-diff-1) Probability integral transform histograms and empirical cumulative distribution function difference plots for $\rho$, under each inferential model and simulation model, for the first vignette geometry (Panel \@ref(fig:geometries)A).
 
 ```{r histogram-ecdf-diff-1, fig.cap="(ref:histogram-ecdf-diff-1)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-1.png")
 knitr::include_graphics(path)
 ```
 
-(ref:histogram-ecdf-diff-2) Probability integral transform histograms and empirical cumulative distribution function difference plots, under each inferential model and simulation model, for the second vignette geometry (Panel \@ref(fig:geometries)B).
+(ref:histogram-ecdf-diff-2) Probability integral transform histograms and empirical cumulative distribution function difference plots for $\rho$, under each inferential model and simulation model, for the second vignette geometry (Panel \@ref(fig:geometries)B).
 
 ```{r histogram-ecdf-diff-2, fig.cap="(ref:histogram-ecdf-diff-2)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-2.png")
 knitr::include_graphics(path)
 ```
 
-(ref:histogram-ecdf-diff-3) Probability integral transform histograms and empirical cumulative distribution function difference plots, under each inferential model and simulation model, for the third vignette geometry (Panel \@ref(fig:geometries)C).
+(ref:histogram-ecdf-diff-3) Probability integral transform histograms and empirical cumulative distribution function difference plots for $\rho$, under each inferential model and simulation model, for the third vignette geometry (Panel \@ref(fig:geometries)C).
 
 ```{r histogram-ecdf-diff-3, fig.cap="(ref:histogram-ecdf-diff-3)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-3.png")
 knitr::include_graphics(path)
 ```
 
-(ref:histogram-ecdf-diff-4) Probability integral transform histograms and empirical cumulative distribution function difference plots, under each inferential model and simulation model, for the fourth vignette geometry (Panel \@ref(fig:geometries)D).
+(ref:histogram-ecdf-diff-4) Probability integral transform histograms and empirical cumulative distribution function difference plots for $\rho$, under each inferential model and simulation model, for the fourth vignette geometry (Panel \@ref(fig:geometries)D).
 
 ```{r histogram-ecdf-diff-4, fig.cap="(ref:histogram-ecdf-diff-4)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-4.png")
 knitr::include_graphics(path)
 ```
 
-(ref:histogram-ecdf-diff-grid) Probability integral transform histograms and empirical cumulative distribution function difference plots, under each inferential model and simulation model, for the grid geometry (Panel \@ref(fig:geometries)E).
+(ref:histogram-ecdf-diff-grid) Probability integral transform histograms and empirical cumulative distribution function difference plots for $\rho$, under each inferential model and simulation model, for the grid geometry (Panel \@ref(fig:geometries)E).
 
 ```{r histogram-ecdf-diff-grid, fig.cap="(ref:histogram-ecdf-diff-grid)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-grid.png")
 knitr::include_graphics(path)
 ```
 
-(ref:histogram-ecdf-diff-civ) Probability integral transform histograms and empirical cumulative distribution function difference plots, under each inferential model and simulation model, for the Côte d’Ivoire geometry (Panel \@ref(fig:geometries)F).
+(ref:histogram-ecdf-diff-civ) Probability integral transform histograms and empirical cumulative distribution function difference plots for $\rho$, under each inferential model and simulation model, for the Côte d’Ivoire geometry (Panel \@ref(fig:geometries)F).
 
 ```{r histogram-ecdf-diff-civ, fig.cap="(ref:histogram-ecdf-diff-civ)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-civ.png")
 knitr::include_graphics(path)
 ```
 
-(ref:histogram-ecdf-diff-tex) Probability integral transform histograms and empirical cumulative distribution function difference plots, under each inferential model and simulation model, for the Texas geometry (Panel \@ref(fig:geometries)G).
+(ref:histogram-ecdf-diff-tex) Probability integral transform histograms and empirical cumulative distribution function difference plots for $\rho$, under each inferential model and simulation model, for the Texas geometry (Panel \@ref(fig:geometries)G).
 
 ```{r histogram-ecdf-diff-tex, fig.cap="(ref:histogram-ecdf-diff-tex)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-tex.png")
@@ -227,25 +227,25 @@ knitr::include_graphics(path)
 
 ### Estimates
 
-(ref:ladder-civ2017phia) HIV prevalence posterior mean and 95% credible interval for each area of Côte d’Ivoire, based on the 2017 PHIA survey. Direct estimates obtained from the survey are as shown in Panel \@ref(fig:hiv-surveys)A.
+(ref:ladder-civ2017phia) The HIV prevalence posterior mean and 95% credible interval for each area of Côte d’Ivoire, based on the 2017 PHIA survey. Direct estimates obtained from the survey are as shown in Panel \@ref(fig:hiv-surveys)A.
 
 ```{r ladder-civ2017phia, fig.cap="(ref:ladder-civ2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/ladder-civ2017phia.png"))
 ```
 
-(ref:ladder-mwi2016phia) HIV prevalence posterior mean and 95% credible interval for each area of Malawi, based on the 2016 PHIA survey. Direct estimates obtained from the survey are as shown in Panel \@ref(fig:hiv-surveys)B.
+(ref:ladder-mwi2016phia) The HIV prevalence posterior mean and 95% credible interval for each area of Malawi, based on the 2016 PHIA survey. Direct estimates obtained from the survey are as shown in Panel \@ref(fig:hiv-surveys)B.
 
 ```{r ladder-mwi2016phia, fig.cap="(ref:ladder-mwi2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/ladder-mwi2016phia.png"))
 ```
 
-(ref:ladder-tza2017phia) HIV prevalence posterior mean and 95% credible interval for each area of Tanzania, based on the 2017 PHIA survey. Direct estimates obtained from the survey are as shown in Panel \@ref(fig:hiv-surveys)C.
+(ref:ladder-tza2017phia) The HIV prevalence posterior mean and 95% credible interval for each area of Tanzania, based on the 2017 PHIA survey. Direct estimates obtained from the survey are as shown in Panel \@ref(fig:hiv-surveys)C.
 
 ```{r ladder-tza2017phia, fig.cap="(ref:ladder-tza2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/ladder-tza2017phia.png"))
 ```
 
-(ref:ladder-zwe2016phia) HIV prevalence posterior mean and 95% credible interval for each area of Zimbabwe, based on the 2016 PHIA survey. Direct estimates obtained from the survey are as shown in Panel \@ref(fig:hiv-surveys)D.
+(ref:ladder-zwe2016phia) The HIV prevalence posterior mean and 95% credible interval for each area of Zimbabwe, based on the 2016 PHIA survey. Direct estimates obtained from the survey are as shown in Panel \@ref(fig:hiv-surveys)D.
 
 ```{r ladder-zwe2016phia, fig.cap="(ref:ladder-zwe2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/ladder-zwe2016phia.png"))
@@ -253,25 +253,25 @@ knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/
 
 ### Cross-validation
 
-(ref:crps-mean-se-civ2017phia) Côte d’Ivoire 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)A).
+(ref:crps-mean-se-civ2017phia) The pointwise CRPS for $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation, with mean and 95% credible interval for the Côte d’Ivoire 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)A).
 
 ```{r crps-mean-se-civ2017phia, fig.cap="(ref:crps-mean-se-civ2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-civ2017phia.png"))
 ```
 
-(ref:crps-mean-se-mwi2016phia) Malawi 2016 PHIA survey \@ref(fig:hiv-surveys)B.
+(ref:crps-mean-se-mwi2016phia) The pointwise CRPS for $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation, with mean and 95% credible interval, for the Malawi 2016 PHIA survey \@ref(fig:hiv-surveys)B.
 
 ```{r crps-mean-se-mwi2016phia, fig.cap="(ref:crps-mean-se-mwi2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-mwi2016phia.png"))
 ```
 
-(ref:crps-mean-se-tza2017phia) Tanzania 2017 PHIA survey \@ref(fig:hiv-surveys)C.
+(ref:crps-mean-se-tza2017phia) The pointwise CRPS for $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation, with mean and 95% credible interval, for the Tanzania 2017 PHIA survey \@ref(fig:hiv-surveys)C.
 
 ```{r crps-mean-se-tza2017phia, fig.cap="(ref:crps-mean-se-tza2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-tza2017phia.png"))
 ```
 
-(ref:crps-mean-se-zwe2016phia) Zimbabwe 2016 PHIA survey \@ref(fig:hiv-surveys)D.
+(ref:crps-mean-se-zwe2016phia) The pointwise CRPS for $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation, with mean and 95% credible interval, for the Zimbabwe 2016 PHIA survey \@ref(fig:hiv-surveys)D.
 
 ```{r crps-mean-se-zwe2016phia, fig.cap="(ref:crps-mean-se-zwe2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-zwe2016phia.png"))
