--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -13,7 +13,7 @@ bibliography: references.bib
 ---
 
 ```{r}
-resource_version <- "20231215-152213-ba7bef73"
+resource_version <- "20231216-114240-f49579e4"
 ```
 
 # Models for areal spatial structure {#beyond-borders}
@@ -586,7 +586,7 @@ Household survey data was used from across four countries in sub-Saharan Africa 
 | Tanzania       | PHIA 2017 | 31              | Region          |
 | Zimbabwe       | PHIA 2016 | 60              | District        |
 
-Table: (\#tab:hiv-surveys) The household surveys included in the HIV prevalence study.
+Table: (\#tab:hiv-surveys) The four PHIA household surveys included in the HIV prevalence study.
 
 ### Household survey data
 
@@ -646,11 +646,18 @@ Given pointwise log-likelihood evaluations, these measures were obtained via the
 
 ### Results
 
+(ref:crps-mean-se-surveys) The mean pointwise leave-one-out CRPS with 95% credible interval (generated using 1.96 times the standard error) in estimating $\rho$ for the four PHIA surveys described in Table \@ref(tab:hiv-surveys) using each inferential model.
+
+```{r crps-mean-se-surveys, fig.cap="(ref:crps-mean-se-surveys)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-surveys.png")
+knitr::include_graphics(path)
+```
+
 ```{r cv-crps}
 gt_cv_crps <- readRDS(paste0("resources/beyond-borders/", resource_version, "/depends/gt_cv-crps.rds"))
 
 gt_cv_crps <- gt_cv_crps %>%
-  gt::tab_caption(caption = 'Figure caption.')
+  gt::tab_caption(caption = 'The mean pointwise leave-one-out and spatial leave-one-out CRPS, with standard errors, for each inferential model across the four considered PHIA surveys. The units used in this table around thousandths.')
 
 if(knitr::is_html_output()) {
   gt_cv_crps
@@ -662,13 +669,7 @@ if(knitr::is_latex_output()) {
 }
 ```
 
-(ref:crps-mean-se-surveys) Figure caption.
-
-```{r crps-mean-se-surveys, fig.cap="(ref:crps-mean-se-surveys)"}
-path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-surveys.png")
-knitr::include_graphics(path)
-```
-
+Figure \@ref(fig:crps-mean-se-surveys) and Table \@ref(tab:cv-crps).
 Figures \@ref(fig:ladder-civ2017phia), \@ref(fig:ladder-mwi2016phia), \@ref(fig:ladder-tza2017phia), and \@ref(fig:ladder-zwe2016phia) show the posterior mean and 95% credible interval obtained for each area for each inferential model.
 Figures \@ref(fig:crps-mean-se-civ2017phia), \@ref(fig:crps-mean-se-mwi2016phia), \@ref(fig:crps-mean-se-tza2017phia), and \@ref(fig:crps-mean-se-zwe2016phia).
 
